# test-task

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
contract/: models.py
contract/api/v1/: serializers.py  services.py  urls.py  views.py
contract/migrations/: 0001_initial.py
credit_request/: apps.py  models.py
credit_request/api/v1/: serializers.py  services.py  urls.py  views.py
credit_request/migrations/: 0001_initial.py
manufacturer/: models.py
manufacturer/api/v1/: serializers.py  urls.py  views.py
manufacturer/migrations/: 0001_initial.py
product/: models.py
product/api/v1/: serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_product_credit_request.py  0002_product_credit_request_alter_product_manufacturer.py  0002_product_product_request.py
test_task/: custom_exception_handler.py  settings.py  urls.py
